third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_combo_invalid.no-opt.exp

Diagnostics:
error: cannot immutably borrow since mutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo_invalid.move:13:17
   │
12 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       --------
   │                       │    │
   │                       │    previous mutable local borrow
   │                       used by mutable field borrow
13 │         let x = &s;
   │                 ^^ immutable borrow attempted here
14 │         *f;
   │         -- requirement enforced here

error: cannot immutably borrow since mutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo_invalid.move:30:17
   │
29 │         if (cond) f = &mut s.f else f = &mut s.g;
   │                       --------          --------
   │                       │    │            │    │
   │                       │    │            │    previous mutable local borrow
   │                       │    │            used by mutable field borrow
   │                       │    previous mutable local borrow
   │                       used by mutable field borrow
30 │         let x = &s;
   │                 ^^ immutable borrow attempted here
31 │         *f;
   │         -- requirement enforced here

error: cannot immutably borrow since mutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo_invalid.move:38:17
   │
37 │         if (cond) x = &mut s else x = other;
   │                       ------ previous mutable local borrow
38 │         let y = &s;
   │                 ^^ immutable borrow attempted here
39 │         *y;
   │         -- requirement enforced here
40 │         *x;
   │         -- conflicting reference `x` used here

error: cannot immutably borrow since mutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo_invalid.move:38:17
   │
37 │         if (cond) x = &mut s else x = other;
   │                       ------ previous mutable local borrow
38 │         let y = &s;
   │                 ^^ immutable borrow attempted here
39 │         *y;
40 │         *x;
   │         -- requirement enforced here
